# Project-EngineGame

./: CMakeLists.txt
res/shader/: main_frag.glsl  main_vert.glsl
res/shaders/default/: light_vert.glsl  main_frag.glsl  main_vert.glsl
src/: main.cpp
src/core/client/camera/: Camera.cpp  Camera.h
src/graphic/buffer/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/graphic/shader/: ShaderProgram.cpp  ShaderProgram.h
src/graphic/texture/: Texture.cpp  Texture.h
src/system/console/: Console.cpp  Console.h
src/system/manager/: Directory.cpp  Directory.h  ResourceManager.cpp  ResourceManager.h
src/system/window/: Event.cpp  Event.h  Window.cpp  Window.h
src/utils/: DefiningTypes.hpp
